Added HTML and CSS for weather forecast

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,6 +56,18 @@ form {
   padding-bottom: 10px;
 }
 
+.forecast {
+  text-align: center;
+}
+
+.forecast-temp {
+  font-size: 13px;
+}
+
+.min-forecast {
+  opacity: 0.5;
+}
+
 .notactive {
   color: white;
   cursor: auto;
